--- a/jekyll/_sass/_variables.scss
+++ b/jekyll/_sass/_variables.scss
@@ -39,7 +39,7 @@ $screen-xs-max:              ($screen-sm-min - 1);
 $screen-sm-max:              ($screen-md-min - 1);
 $screen-md-max:              ($screen-lg-min - 1);
 
-$toc-breakpoint: 1000px;
+$toc-breakpoint: 1100px; // where the toc-rightsidebar disappears.
 $leftbar-width: 280px;
 $rightbar-width: 350px;
 
